--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,14 +1,14 @@
 {
   "welcome": "Discover Uzbekistan with O‘ziBEK",
   "subtitle": "Your ultimate guide to the heart of Central Asia",
-  "book_stay": "Book a Stay",
+  "book_stay": "Book a Hotel",
   "explore_attractions": "Explore Attractions",
   "login": "Login",
   "register": "Register",
   "logout": "Logout",
   "profile": "Profile",
   "home": "Home",
-  "stays": "Stays",
+  "stays": "Hotels",
   "attractions": "Attractions",
   "map": "Map",
   "gallery": "Gallery",
@@ -18,7 +18,7 @@
   "nature": "Nature & Mountains",
   "modern_cities": "Modern Cities",
   "popular_cities": "Popular Cities",
-  "featured_stays": "Featured Stays",
+  "featured_stays": "Featured Hotels",
   "top_attractions": "Top Attractions",
   "view_details": "View Details",
   "price_per_night": "Price per night",
