--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,14 +1,14 @@
 {
   "welcome": "Откройте для себя Узбекистан с O‘ziBEK",
   "subtitle": "Ваш лучший путеводитель по сердцу Центральной Азии",
-  "book_stay": "Забронировать жилье",
+  "book_stay": "Забронировать отель",
   "explore_attractions": "Изучить достопримечательности",
   "login": "Войти",
   "register": "Регистрация",
   "logout": "Выйти",
   "profile": "Профиль",
   "home": "Главная",
-  "stays": "Жилье",
+  "stays": "Отели",
   "attractions": "Достопримечательности",
   "map": "Карта",
   "gallery": "Галерея",
@@ -18,7 +18,7 @@
   "nature": "Природа и Горы",
   "modern_cities": "Современные города",
   "popular_cities": "Популярные города",
-  "featured_stays": "Рекомендуемое жилье",
+  "featured_stays": "Рекомендуемые отели",
   "top_attractions": "Лучшие места",
   "view_details": "Подробнее",
   "price_per_night": "Цена за ночь",
