Добавлены изображения достопримечательностей и обновлены переводы для улучшения локализации

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -30,5 +30,38 @@
   "submit": "Submit",
   "search": "Search",
   "filter": "Filter",
-  "upload_photo": "Upload Photo"
+  "upload_photo": "Upload Photo",
+  "tour_types": "Tour Types",
+  "historical": "Historical",
+  "historical_desc": "Journey through centuries following the traces of ancient civilizations.",
+  "gastronomic": "Gastronomic",
+  "gastronomic_desc": "Delicious national cuisine dishes in every region.",
+  "eco_tourism": "Eco-tourism",
+  "eco_tourism_desc": "Unity with nature in mountains and deserts.",
+  "city": "City",
+  "category": "Category",
+  "all": "All",
+  "type": "Type",
+  "min_price": "Min Price",
+  "max_price": "Max Price",
+  "night": "night",
+  "cultural": "Cultural",
+  "nature_only": "Nature",
+  "hotel": "Hotel",
+  "hostel": "Hostel",
+  "guesthouse": "Guesthouse",
+  "tashkent": "Tashkent",
+  "samarkand": "Samarkand",
+  "bukhara": "Bukhara",
+  "khiva": "Khiva",
+  "invalid_credentials": "Invalid email or password",
+  "registration_failed": "Registration failed. Email might be taken.",
+  "ancient_cities": "Ancient Cities",
+  "hotels_count": "Hotels",
+  "attractions_count": "Attractions",
+  "support": "Support",
+  "tashkent_desc": "Capital of friendship and warmth",
+  "samarkand_desc": "Pearl of the East",
+  "bukhara_desc": "Holy City",
+  "khiva_desc": "Open-air Museum"
 }
