--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -30,5 +30,38 @@
   "submit": "Отправить",
   "search": "Поиск",
   "filter": "Фильтр",
-  "upload_photo": "Загрузить фото"
+  "upload_photo": "Загрузить фото",
+  "tour_types": "Виды Туризма",
+  "historical": "Исторический",
+  "historical_desc": "Путешествие сквозь века по следам древних цивилизаций.",
+  "gastronomic": "Гастрономический",
+  "gastronomic_desc": "Вкуснейшие блюда национальной кухни в каждом регионе.",
+  "eco_tourism": "Эко-туризм",
+  "eco_tourism_desc": "Единение с природой в горах и пустынях.",
+  "city": "Город",
+  "category": "Категория",
+  "all": "Все",
+  "type": "Тип",
+  "min_price": "Мин. цена",
+  "max_price": "Макс. цена",
+  "night": "ночь",
+  "cultural": "Культурный",
+  "nature_only": "Природа",
+  "hotel": "Отель",
+  "hostel": "Хостел",
+  "guesthouse": "Гостевой дом",
+  "tashkent": "Ташкент",
+  "samarkand": "Самарканд",
+  "bukhara": "Бухара",
+  "khiva": "Хива",
+  "invalid_credentials": "Неверный email или пароль",
+  "registration_failed": "Ошибка регистрации. Возможно, email уже занят.",
+  "ancient_cities": "Древних городов",
+  "hotels_count": "Отелей",
+  "attractions_count": "Достопримечательностей",
+  "support": "Поддержка",
+  "tashkent_desc": "Столица дружбы и тепла",
+  "samarkand_desc": "Жемчужина Востока",
+  "bukhara_desc": "Священный город",
+  "khiva_desc": "Музей под открытым небом"
 }
