--- a/client/public/locales/uz/translation.json
+++ b/client/public/locales/uz/translation.json
@@ -30,5 +30,38 @@
   "submit": "Yuborish",
   "search": "Qidirish",
   "filter": "Filtr",
-  "upload_photo": "Rasm yuklash"
+  "upload_photo": "Rasm yuklash",
+  "tour_types": "Turizm turlari",
+  "historical": "Tarixiy",
+  "historical_desc": "Qadimgi sivilizatsiyalar izidan asrlar osha sayohat.",
+  "gastronomic": "Gastronomik",
+  "gastronomic_desc": "Har bir mintaqada mazali milliy taomlar.",
+  "eco_tourism": "Eko-turizm",
+  "eco_tourism_desc": "Tog‘lar va cho‘llarda tabiat bilan birlik.",
+  "city": "Shahar",
+  "category": "Toifa",
+  "all": "Barchasi",
+  "type": "Tur",
+  "min_price": "Min. narx",
+  "max_price": "Maks. narx",
+  "night": "tun",
+  "cultural": "Madaniy",
+  "nature_only": "Tabiat",
+  "hotel": "Mehmonxona",
+  "hostel": "Hostel",
+  "guesthouse": "Mehmon uyi",
+  "tashkent": "Toshkent",
+  "samarkand": "Samarqand",
+  "bukhara": "Buxoro",
+  "khiva": "Xiva",
+  "invalid_credentials": "Noto‘g‘ri email yoki parol",
+  "registration_failed": "Ro‘yxatdan o‘tishda xatolik. Email band bo‘lishi mumkin.",
+  "ancient_cities": "Qadimiy shaharlar",
+  "hotels_count": "Mehmonxonalar",
+  "attractions_count": "Diqqatga sazovor joylar",
+  "support": "Qo‘llab-quvvatlash",
+  "tashkent_desc": "Do‘stlik va iliqlik poytaxti",
+  "samarkand_desc": "Sharq durdonasi",
+  "bukhara_desc": "Muqaddas shahar",
+  "khiva_desc": "Ochiq osmon ostidagi muzey"
 }
